# semap_pkg

./: README.md  pyproject.toml  requirements.txt
src/semap/: main.py
tests/: main.py
