[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semap"
description = ""
keywords = ["", ""]
authors = [
  { name="Matvei Panteleev", email="vq27jk@inf.elte.hu" },
]
classifiers = ["Development Status :: 5 - Production/Stable",
 "Environment :: Console",
 "Intended Audience :: Science/Research",
 "Operating System :: OS Independent",
 "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dynamic = ["version", "readme"]

[project.urls]
Homepage = "https://github.com/QuoZer/semap_pkg"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "semap.__version__"}